--- a/server/package.json
+++ b/server/package.json
@@ -4,19 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --runInBand --detectOpenHandles",
+    "test": "jest",
+    "test:watch": "jest --watch --coverage",
     "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.5.0",
-    "mongodb-memory-server": "^8.11.5",
     "mongoose": "^7.0.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "@shelf/jest-mongodb": "^4.1.7",
+    "mongodb-memory-server": "^8.11.5",
+    "nodemon": "^2.0.21",
+    "supertest": "^6.3.3"
   }
 }
