--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "api-problem": "^9.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "jest": "^29.5.0",
     "mongoose": "^7.0.1"
   },
