--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,11 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "@reduxjs/toolkit": "^1.9.3",
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-web": "^0.18.12",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
