--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,8 +16,9 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.4",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "^0.18.12",
     "react-redux": "^8.0.5"
   },
