feat: update test script and mongo test uri

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --forceExit --detectOpenHandles",
     "test:watch": "jest --watch --coverage",
     "start": "node index.js",
     "start:dev": "nodemon index.js",
